[gd_scene load_steps=3 format=3 uid="uid://s5td064aaxj4"]

[ext_resource type="PackedScene" uid="uid://b2ndbkv4et6g1" path="res://ui/overlays/base_overlay/base_overlay.tscn" id="1_ga0be"]
[ext_resource type="Script" uid="uid://chko5yxrqhsma" path="res://ui/overlays/garage_menu_overlay/garage_menu_overlay.gd" id="2_yvp6e"]

[node name="GarageMenuOverlay" instance=ExtResource("1_ga0be")]
script = ExtResource("2_yvp6e")

[node name="SettingsButton" type="Button" parent="PanelContainer/SectionsContainer/RootSection" index="0"]
unique_name_in_owner = true
layout_mode = 2
text = "SETTINGS"

[node name="MetricsButton" type="Button" parent="PanelContainer/SectionsContainer/RootSection" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "METRICS
"

[node name="LogOutButton" type="Button" parent="PanelContainer/SectionsContainer/RootSection" index="2"]
unique_name_in_owner = true
layout_mode = 2
text = "LOG OUT"

[node name="QuitButton" type="Button" parent="PanelContainer/SectionsContainer/RootSection" index="3"]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT"
